# lobpred

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: deeplob_walkthrough.py  regime_scaling.py
lobpred/: __init__.py  analyze.py  baselines.py  dataset.py  diagnose.py  diagnostics.py  evaluate.py  features.py  microstructure.py  models.py  ofi.py  run.py  target_study.py
lobpred/data/: __init__.py  fi2010.py  synthetic.py
tests/: test_smoke.py
