[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lobpred"
version = "0.1.0"
description = "Short-horizon limit-order-book move prediction: stationary features, simple baselines vs deep models, and an honest ablation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Frederik Benirschke" }]
keywords = ["limit order book", "market microstructure", "deep learning", "TCN", "DeepLOB"]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
# Deep models (TCN / DeepLOB / axial attention). CPU torch is fine.
deep = ["torch>=2.1"]
# Diagnostic plots.
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["lobpred*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
